deploy: 3a2f1105bd111bd359ce5a2c757679ff0316a398

--- a/BFVScheme.html
+++ b/BFVScheme.html
@@ -11,7 +11,7 @@
    <!--  l. 615  --><div class='crosslinks'><p class='noindent'>[<a href='TFHEScheme.html'>prev</a>][<a href='FullyHomomorphicEncryptionSchemes.html#BFVScheme.html'>parent</a>][<a href='CKKSScheme.html'>next</a>]</p></div>
    <h3 class='sectionHead' id='bfv-scheme'><span class='titlemark'>D-2   </span> <a id='x111-140000D-2'></a>BFV Scheme</h3>
 <!--  l. 1  --><p class='noindent'>The BFV scheme is designed for homomorphic addition and multiplication of integers. BFV’s encoding
-scheme does not require such approximation issues, because BFV is designed to encode only integers.
+scheme does not require such approximation issues because BFV is designed to encode only integers.
 Therefore, BFV guarantees exact encryption and decryption. BFV is suitable for use cases where the
 encrypted and decrypted values should exactly match (e.g., voting, financial computation), whereas
 CKKS is suitable for the use cases that tolerate tiny errors (e.g., data analytics, machine
