--- a/Discussion.html
+++ b/Discussion.html
@@ -54,7 +54,7 @@ However, as we explained in Summary B-2.3.1 in <a href='Decryption.html#in-the-
 <!--  l. 81  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>e</mi></math> can be any coefficient
 of <!--  l. 81  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>E</mi></math>), then modulo
 reduction by <!--  l. 81  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>
-starts to contaminate the scaled plaintext bits. This violation of error bound occurs when the noise
+starts to contaminate the scaled plaintext bits. This violation of the error bound occurs when the noise
 <!--  l. 81  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>e</mi></math>
 grows too much over homomorphic operations, or the ciphertext modulus
 <!--  l. 81  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math> is not sufficiently larger
