--- a/Discussion2.html
+++ b/Discussion2.html
@@ -35,11 +35,11 @@ Notably, the plaintext value <!--  l. 209  --><math display='inline' xmlns='http
 stays the same after the modulus switch, while its scaling factor
 <!--  l. 209  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi mathvariant='normal'>Δ</mi></math> gets reduced to
 <!--  l. 209  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi mathvariant='normal'>Δ</mi></mrow><mo accent='true' stretchy='false'>^</mo></mover></math> and the noise
-<!--  l. 209  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>e</mi></math> reduced to
+<!--  l. 209  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>e</mi></math> gets reduced to
 <!--  l. 209  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>e</mi></mrow><mo accent='true' stretchy='false'>^</mo></mover></math>. However, after the modulus
 switch, the distance between <!--  l. 209  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>e</mi></mrow><mo accent='true' stretchy='false'>^</mo></mover></math>’s
 MSB and <!--  l. 209  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mover accent='true'><mrow><mi mathvariant='normal'>Δ</mi></mrow><mo accent='true' stretchy='false'>^</mo></mover><mi>m</mi></mrow></math>’s LSB gets reduced
-than the distance between <!--  l. 209  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>e</mi></math>’s
+compared to the distance between <!--  l. 209  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>e</mi></math>’s
 MSB and <!--  l. 209  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi mathvariant='normal'>Δ</mi><mi>m</mi></mrow></math>’s
 LSB.
                                                                                          
