--- a/EncryptionandDecryption3.html
+++ b/EncryptionandDecryption3.html
@@ -20,7 +20,7 @@ plaintext polynomial <!--  l. 107  --><math display='inline' xmlns='http://www.w
 is scaled by <!--  l. 107  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi mathvariant='normal'>Δ</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mrow><mo fence='true' form='prefix'>⌊</mo><mrow><mstyle displaystyle='true'><mfrac><mrow><mi>q</mi>
 </mrow><mrow><mi>t</mi></mrow></mfrac></mstyle></mrow><mo fence='true' form='postfix'>⌋</mo></mrow></mrow></math>.
 This strategy effectively shifts each plaintext coefficient value to the most significant bits while keeping
-the noise in the least significant bits. One the other hand, BGV does not scale the plaintext polynomial
+the noise in the least significant bits. On the other hand, BGV does not scale the plaintext polynomial
 <!--  l. 107  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>M</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>X</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>, but instead it scales
 each new noise <!--  l. 107  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>E</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>X</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>
 by <!--  l. 107  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi mathvariant='normal'>Δ</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>t</mi></mrow></math>, making the
