--- a/ExactFastBaseConversiontextsfFastBConvEx.html
+++ b/ExactFastBaseConversiontextsfFastBConvEx.html
@@ -121,9 +121,9 @@ should be much smaller than its modulus <!--  l. 673  --><math display='inline' 
 <!--  l. 742  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-rel' stretchy='false'>|</mo><mi>u</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>μ</mi><msub><mrow><mo class='MathClass-rel' stretchy='false'>|</mo></mrow><mrow><msub><mrow><mi>b</mi></mrow><mrow><mi>α</mi></mrow></msub></mrow></msub> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>u</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>μ</mi></mrow></math>. To remove
 the modulo reduction operation, the canonical (i.e., unsigned) residue representation is inappropriate, because
 if <!--  l. 742  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>u</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>μ</mi></mrow></math>
-becomes negative, then the residue will underflow and has to be wrapped around, which requires a modulo
-reduction operation. To prevent the occurrence of both overflow and underflow cases, we need the centered
-(i.e., signed) residue representation.
+becomes negative, then the residue will underflow and have to be wrapped around, which requires a
+modulo reduction operation. To prevent the occurrence of both overflow and underflow cases, we need the
+centered (i.e., signed) residue representation.
                                                                                          
                                                                                          
 </p>
