--- a/GLWECiphertexttoCiphertextAddition.html
+++ b/GLWECiphertexttoCiphertextAddition.html
@@ -35,8 +35,8 @@
 </div>
                                                                                          
                                                                                          
-<!--  l. 34  --><p class='indent'>   This means that adding two TFHE ciphertexts and decrypting it gives the same effect as adding two original
-(<!--  l. 34  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi mathvariant='normal'>Δ</mi></math>-scaled)
+<!--  l. 34  --><p class='indent'>   This means that adding two TFHE ciphertexts and decrypting the resulting ciphertext gives the same effect as adding
+two original (<!--  l. 34  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi mathvariant='normal'>Δ</mi></math>-scaled)
 plaintexts: <!--  l. 34  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi mathvariant='normal'>Δ</mi><msup><mrow><mi>M</mi></mrow><mrow><mo class='MathClass-open' stretchy='false'>⟨</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>⟩</mo></mrow></msup><mo class='MathClass-bin' stretchy='false'>+</mo> <mi mathvariant='normal'>Δ</mi><msup><mrow><mi>M</mi></mrow><mrow><mo class='MathClass-open' stretchy='false'>⟨</mo><mn>2</mn><mo class='MathClass-close' stretchy='false'>⟩</mo></mrow></msup> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi mathvariant='normal'>Δ</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mo class='MathClass-open' stretchy='false'>(</mo><msup><mrow><mi>M</mi></mrow><mrow><mo class='MathClass-open' stretchy='false'>⟨</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>⟩</mo></mrow></msup><mo class='MathClass-bin' stretchy='false'>+</mo> <msup><mrow><mi>M</mi></mrow><mrow><mo class='MathClass-open' stretchy='false'>⟨</mo><mn>2</mn><mo class='MathClass-close' stretchy='false'>⟩</mo></mrow></msup><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>.
 </p><!--  l. 36  --><p class='indent'>   <!--  l. 36  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
 </p>
