--- a/HomomorphicKeySwitching.html
+++ b/HomomorphicKeySwitching.html
@@ -11,7 +11,7 @@
    <!--  l. 130  --><div class='crosslinks'><p class='noindent'>[<a href='HomomorphicCiphertexttoPlaintextMultiplication.html'>prev</a>][<a href='TFHEScheme.html#HomomorphicKeySwitching.html'>parent</a>][<a href='HomomorphicCiphertexttoCiphertextMultiplication.html'>next</a>]</p></div>
    <h4 class='subsectionHead' id='homomorphic-key-switching'><span class='titlemark'>D-1.5   </span> <a id='x106-123000D-1.5'></a>Homomorphic Key Switching</h4>
 <!--  l. 133  --><p class='noindent'><span class='rm-lmbx-10x-x-109'>- Reference:  </span><a href='https://www.zama.ai/post/tfhe-deep-dive-part-3'>TFHE Deep Dive - Part III - Key switching and leveled multiplications</a> <span class='cite'>[<a href='refname.html#Xtfhe-3'>9</a>]</span>
-</p><!--  l. 136  --><p class='indent'>   TFHE’s key switching scheme changes an LWE ciphertext’s the secret key from
+</p><!--  l. 136  --><p class='indent'>   TFHE’s key switching scheme changes an LWE ciphertext’s secret key from
 <!--  l. 136  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>s</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></math> to
 <!--  l. 136  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mover accent='true'><mrow><mi>s</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></mrow><mrow><msup><mrow></mrow><mrow><mi>′</mi>
  </mrow></msup></mrow></msub></math>.
