--- a/ModulusSwitch.html
+++ b/ModulusSwitch.html
@@ -245,7 +245,7 @@ where <!--  l. 449  --><math display='inline' xmlns='http://www.w3.org/1998/Math
 and <!--  l. 449  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>q</mi></mrow><mo accent='true' stretchy='false'>^</mo></mover></math>
 and <!--  l. 449  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><msub><mrow><mi>q</mi></mrow><mrow><mi>l</mi></mrow></msub></mrow><mo accent='true' stretchy='false'>^</mo></mover></math>
 are co-prime. Therefore, <!--  l. 449  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>q</mi></mrow><mo accent='true' stretchy='false'>^</mo></mover></math>
-may       or       may       not       be       one       of       the       ciphertext       modulus
+may       or       may       not       be       one       of       the       ciphertext       moduli
 comprising        a        BGV        ciphertext’s        multiplicative        level        moduli
 <!--  l. 449  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi>q</mi></mrow><mrow><mn>0</mn></mrow></msub><mo class='MathClass-punc' stretchy='false'>,</mo><msub><mrow><mi>q</mi></mrow><mrow><mn>1</mn></mrow></msub><mo class='MathClass-punc' stretchy='false'>,</mo><mo class='MathClass-rel' stretchy='false'>⋯</mo><mspace class='thinspace' width='0.17em'></mspace><mo class='MathClass-punc' stretchy='false'>,</mo><msub><mrow><mi>q</mi></mrow><mrow><mi>L</mi></mrow></msub></mrow></math>.
 </p><!--  l. 451  --><p class='noindent'><!--  l. 451  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
