--- a/Overview2.html
+++ b/Overview2.html
@@ -51,7 +51,7 @@ values of each noise <!--  l. 47  --><math display='inline' xmlns='http://www.w3
 the attacker’s brute-force search space of applying linear algebra to those
 <!--  l. 47  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math> equations
 is: <!--  l. 47  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mover class='msup'><mrow><mover accent='false'><mrow><mi>r</mi> <mo class='MathClass-bin' stretchy='false'>×</mo><mi>r</mi> <mo class='MathClass-bin' stretchy='false'>×</mo><mi>r</mi> <mo class='MathClass-bin' stretchy='false'>×</mo><mo class='MathClass-rel' stretchy='false'>⋯</mo> <mo class='MathClass-bin' stretchy='false'>×</mo><mi>r</mi></mrow><mo>︷</mo></mover></mrow><mrow><mstyle class='text'><mtext>n times</mtext></mstyle></mrow></mover> <mo class='MathClass-rel' stretchy='false'>=</mo> <msup><mrow><mi>r</mi></mrow><mrow><mi>n</mi></mrow></msup></mrow></math>.
-Thus, the number of the noisy equations grows, the aggregate possibilities of
+Thus, the number of noisy equations grows, the aggregate possibilities of
 <!--  l. 47  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>e</mi></mrow><mrow><mi>i</mi></mrow></msub></math>s grow
 exponentially, which means that the attacker’s cost of attack grows exponentially.
 </p><!--  l. 49  --><p class='indent'>   Based on this intuition, the mathematical hard problem that constitutes lattice-based cryptography is
@@ -73,7 +73,7 @@ is a small noise, and <!--  l. 56  --><math display='inline' xmlns='http://www.w
 is        a        scaling        factor        to        bit-wise        separate        the        plaintext
 <!--  l. 56  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>m</mi></math>
 from the noise <!--  l. 56  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>e</mi></math>
-with an enough gap when they are added up (this is needed for successful decryption, which
+with enough gap when they are added up (this is needed for successful decryption, which
 will be explained later).
 </p><!--  l. 58  --><p class='noindent'>For each encryption, a random <!--  l. 58  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>k</mi></math>-dimensional
 vector <!--  l. 58  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>A</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <msubsup><mrow><mi>ℤ</mi></mrow><mrow><mi>q</mi></mrow><mrow><mi>k</mi></mrow></msubsup></mrow></math>
