--- a/PolynomialDecomposition.html
+++ b/PolynomialDecomposition.html
@@ -32,11 +32,11 @@ where:
 </mrow><mrow><msup><mrow><mi>β</mi></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac></mstyle> <mo class='MathClass-bin' stretchy='false'>+</mo> <mo class='MathClass-rel' stretchy='false'>⋯</mo> <mo class='MathClass-bin' stretchy='false'>+</mo> <msub><mrow><mi>f</mi></mrow><mrow><mi>l</mi></mrow></msub><mstyle displaystyle='true'><mfrac><mrow> <mi>q</mi>
 </mrow><mrow><msup><mrow><mi>β</mi></mrow><mrow><mi>l</mi></mrow></msup></mrow></mfrac></mstyle></mrow></math>
 </p><!--  l. 61  --><p class='noindent'><!--  l. 61  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
-</p><!--  l. 63  --><p class='noindent'>We             denote             the             decomposition             of             polynomial
+</p><!--  l. 63  --><p class='noindent'>We           denote           the           decomposition           of           the           polynomial
 <!--  l. 63  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>f</mi></math>
-into                                                                                                             base
+into                                                     the                                                     base
 <!--  l. 63  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>β</mi></math>
-with                                                                                                            level
+with                                                    the                                                    level
 <!--  l. 63  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>l</mi></math>
 as follows:
 </p><!--  l. 65  --><p class='noindent'><!--  l. 65  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
