--- a/RLWEModulusSwitching.html
+++ b/RLWEModulusSwitching.html
@@ -84,7 +84,7 @@ stay the same as before.
 </p><!--  l. 284  --><p class='indent'>   <span class='underline'><span class='rm-lmbx-10x-x-109'>Proof</span></span>
 </p><!--  l. 287  --><p class='indent'>
    </p><dl class='enumerate-enumitem'><dt class='enumerate-enumitem'>
-1. </dt><dd class='enumerate-enumitem'>Note the followings:
+1. </dt><dd class='enumerate-enumitem'>Note the following:
    <!--  l. 289  --><p class='noindent'><!--  l. 289  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mover accent='true'><mrow><mi>b</mi></mrow><mo accent='true' stretchy='false'>^</mo></mover></mrow><mrow><mi>i</mi></mrow></msub> <mo class='MathClass-rel' stretchy='false'>=</mo> <mstyle mathsize='1.61em'><mrow><mo fence='true' form='prefix'>⌈</mo><mrow></mrow><mo fence='true' form='postfix'></mo></mrow></mstyle><msub><mrow><mi>b</mi></mrow><mrow><mi>i</mi></mrow></msub><mstyle displaystyle='true'><mfrac><mrow><mover accent='true'><mrow><mi>q</mi></mrow><mo accent='true' stretchy='false'>^</mo></mover>
  </mrow><mrow><mi>q</mi> </mrow></mfrac></mstyle><mstyle mathsize='1.61em'><mrow><mo fence='true' form='prefix'>⌋</mo><mrow></mrow><mo fence='true' form='postfix'></mo></mrow></mstyle> <mo class='MathClass-rel' stretchy='false'>=</mo> <msub><mrow><mi>b</mi></mrow><mrow><mi>i</mi></mrow></msub><mstyle displaystyle='true'><mfrac><mrow><mover accent='true'><mrow><mi>q</mi></mrow><mo accent='true' stretchy='false'>^</mo></mover>
  </mrow><mrow><mi>q</mi> </mrow></mfrac></mstyle> <mo class='MathClass-bin' stretchy='false'>+</mo> <msub><mrow><mi>𝜖</mi></mrow><mrow><msub><mrow><mi>b</mi></mrow><mrow><mi>i</mi></mrow></msub></mrow></msub></mrow></math>
