--- a/RNSbasedModulusSwitchtextsfModSwitchtextsubscriptRNS.html
+++ b/RNSbasedModulusSwitchtextsfModSwitchtextsubscriptRNS.html
@@ -231,7 +231,7 @@ divides <!--  l. 336  --><math display='inline' xmlns='http://www.w3.org/1998/Ma
 increases the modulus without explicitly modifying the modulo value
 <!--  l. 336  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>x</mi></math>, but generates
 some <!--  l. 336  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>-overflow
-noise. <span class='rm-lmss-10x-x-109'>ModSwitch</span><sub><span class='rm-lmss-10x-x-109'>RNS</span></sub> and <span class='rm-lmss-10x-x-109'>ModRaise</span><sub><span class='rm-lmss-10x-x-109'>RNS</span></sub> generates some noise, whereas <span class='rm-lmss-10x-x-109'>ModDrop</span><sub><span class='rm-lmss-10x-x-109'>RNS</span></sub> does not generate
+noise. <span class='rm-lmss-10x-x-109'>ModSwitch</span><sub><span class='rm-lmss-10x-x-109'>RNS</span></sub> and <span class='rm-lmss-10x-x-109'>ModRaise</span><sub><span class='rm-lmss-10x-x-109'>RNS</span></sub> generate some noise, whereas <span class='rm-lmss-10x-x-109'>ModDrop</span><sub><span class='rm-lmss-10x-x-109'>RNS</span></sub> does not generate
 any noise.
                                                                                          
                                                                                          
