--- a/RescalingModuloofCongruenceRelations.html
+++ b/RescalingModuloofCongruenceRelations.html
@@ -20,7 +20,7 @@ remainder of <!--  l. 5  --><math display='inline' xmlns='http://www.w3.org/1998
 by <!--  l. 5  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>. Its equivalent
 numeric equation is <!--  l. 5  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>b</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>k</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>q</mi></mrow></math>,
 meaning that <!--  l. 5  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>a</mi></math>
-and <!--  l. 5  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>b</mi></math> differs by
+and <!--  l. 5  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>b</mi></math> differ by
 some multiple of <!--  l. 5  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>.
 The congruence and equation are two different ways of describing the relationship between two numbers
 <!--  l. 5  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>a</mi></math> and
@@ -328,7 +328,7 @@ relations in the new modulo. On the other hand, if any numbers in the congruence
 are not divisible by the rescaling factor during the modulo rescaling (i.e., we need to round
 some decimals), then the rescaled result gives approximate congruence relations in the new
 modulo.
-</p><!--  l. 163  --><p class='indent'>   In a more complicated congruence relation that contain many
+</p><!--  l. 163  --><p class='indent'>   In a more complicated congruence relation that contains many
 <!--  l. 163  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mtext class='MathClass-open' stretchy='false'>(+,−,⋅)</mtext></mrow></math>
 operations, the same principle of modulo rescaling explained above can be recursively applied to each pair
 of operands surrounding each operator.
@@ -389,7 +389,7 @@ derived as follows:
 </p><!--  l. 213  --><p class='indent'>   <!--  l. 213  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mn>4</mn> <mo class='MathClass-rel' stretchy='false'>≡</mo><mn>7</mn><mspace width='0.2em'></mspace><mo class='MathClass-bin' stretchy='false'> mod</mo><mspace width='0.2em'></mspace> <mn>3</mn></mrow></math>
 </p><!--  l. 215  --><p class='indent'>   <!--  l. 215  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
 </p><!--  l. 217  --><p class='indent'>   As shown above, the rescaled congruence relation preserves correctness,
-because all rescaled values are divisible by the rescaling factor. By contract, if
+because all rescaled values are divisible by the rescaling factor. By contrast, if
 <!--  l. 217  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mstyle displaystyle='true'><mfrac><mrow> <mi>q</mi>
 </mrow><mrow><msup><mrow><mi>q</mi></mrow><mrow><mi>′</mi></mrow></msup></mrow></mfrac></mstyle> <mo class='MathClass-rel' stretchy='false'>=</mo> <mstyle displaystyle='true'><mfrac><mrow><mn>30</mn>
  </mrow><mrow><mn>3</mn> </mrow></mfrac></mstyle> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>10</mn></mrow></math> did not
