--- a/SingleValueEncoding.html
+++ b/SingleValueEncoding.html
@@ -103,15 +103,15 @@ their encoded polynomials are as follows:
 polynomial is also mapped to <!--  l. 126  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi>m</mi></mrow><mrow><mn>1</mn><mo class='MathClass-bin' stretchy='false'>+</mo><mn>2</mn></mrow></msub> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>1001</mn></mrow></math>:
 </p><!--  l. 128  --><p class='indent'>   <!--  l. 128  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi>M</mi></mrow><mrow><mn>3</mn></mrow></msub><mo class='MathClass-open' stretchy='false'>(</mo><mi>X</mi><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>1</mn><msup><mrow><mi>X</mi></mrow><mrow><mn>3</mn></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>0</mn><msup><mrow><mi>X</mi></mrow><mrow><mn>2</mn></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>0</mn><msup><mrow><mi>X</mi></mrow><mrow><mn>1</mn></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn></mrow></math>
 </p><!--  l. 130  --><p class='indent'>   <!--  l. 130  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
-</p><!--  l. 132  --><p class='indent'>   That being said, both polynomials that are mapped to the same
+</p><!--  l. 132  --><p class='indent'>   That being said, both polynomials are mapped to the same
 <!--  l. 132  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>m</mi></mrow><mrow><mn>1</mn><mo class='MathClass-bin' stretchy='false'>+</mo><mn>2</mn></mrow></msub></math> (i.e.,
 <!--  l. 132  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mn>1001</mn></mrow></math>) as
 follows:
 </p><!--  l. 134  --><p class='indent'>   <!--  l. 134  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi>M</mi></mrow><mrow><mn>1</mn><mo class='MathClass-bin' stretchy='false'>+</mo><mn>2</mn></mrow></msub><mo class='MathClass-open' stretchy='false'>(</mo><mn>2</mn><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>4</mn> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>4</mn> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>9</mn></mrow></math>
 </p><!--  l. 136  --><p class='indent'>   <!--  l. 136  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi>M</mi></mrow><mrow><mn>3</mn></mrow></msub><mo class='MathClass-open' stretchy='false'>(</mo><mn>2</mn><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>8</mn> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>9</mn></mrow></math>
 </p><!--  l. 138  --><p class='indent'>   <!--  l. 138  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
-</p><!--  l. 140  --><p class='indent'>   Although the encoding scheme in Summary D-2.1 is not bijective but only one-to-many mappings,
-it preserves homomorphism and and the decoded number decomposition sums to the same
+</p><!--  l. 140  --><p class='indent'>   Although the encoding scheme in Summary D-2.1 is not bijective but only one-to-many
+mappings, it preserves homomorphism and the decoded number decomposition sums to the same
 original integer. Therefore, this encoding scheme can be validly used for fully homomorphic
 encryption.
                                                                                          
