--- a/SparselyPackingCiphertext.html
+++ b/SparselyPackingCiphertext.html
@@ -26,7 +26,7 @@ slots out of <!--  l. 1356  --><math display='inline' xmlns='http://www.w3.org/1
 <mrow><mn>2</mn></mrow></mfrac> </mrow></math> slots,
 where <!--  l. 1356  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>n</mi></mrow><mrow><mi>′</mi></mrow></msup></math> is some
 number that divides <!--  l. 1356  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>.
-Then, the corresponding input vector and encoded polynomial gets a special property as described
+Then, the corresponding input vector and encoded polynomial get a special property as described
 below:
 </p>
    <div class='tcolorbox tcolorbox' id='tcolobox-100'>     
@@ -60,7 +60,7 @@ where <!--  l. 1361  --><math display='inline' xmlns='http://www.w3.org/1998/Mat
 and thus <!--  l. 1361  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>M</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>X</mi><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-rel' stretchy='false'>=</mo> <msub><mrow><mi>M</mi></mrow><mrow><mi>Y</mi> </mrow></msub><mo class='MathClass-open' stretchy='false'>(</mo><msup><mrow><mi>X</mi></mrow><mrow> <mfrac><mrow><mi>n</mi></mrow>
 <mrow><msup><mrow><mi>n</mi></mrow><mrow><mi>′</mi></mrow></msup></mrow></mfrac></mrow></msup><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>.
 </p><!--  l. 1363  --><p class='noindent'><!--  l. 1363  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
-</p><!--  l. 1365  --><p class='noindent'>Then, the followings are true:
+</p><!--  l. 1365  --><p class='noindent'>Then, the following are true:
     </p><dl class='enumerate-enumitem'><dt class='enumerate-enumitem'>
 1.  </dt><dd class='enumerate-enumitem'>Every <!--  l. 1368  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi>M</mi></mrow><mrow><mi>Y</mi> </mrow></msub><mo class='MathClass-open' stretchy='false'>(</mo><mi>Y</mi> <mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>ℝ</mi><mo class='MathClass-open' stretchy='false'>[</mo><mi>Y</mi> <mo class='MathClass-close' stretchy='false'>]</mo><mo class='MathClass-bin' stretchy='false'>∕</mo><mo class='MathClass-open' stretchy='false'>(</mo><msup><mrow><mi>Y</mi> </mrow><mrow><msup><mrow><mi>n</mi></mrow><mrow><mi>′</mi></mrow></msup>
   </mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>
