--- a/TFHEonaDiscreteTorus.html
+++ b/TFHEonaDiscreteTorus.html
@@ -53,7 +53,7 @@ integer (i.e., <!--  l. 1222  --><math display='inline' xmlns='http://www.w3.org
 This means the plaintext also has to be encoded as values within
 <!--  l. 1222  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>[</mo><mn>0</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math> instead of
 integers within <!--  l. 1222  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>[</mo><mn>0</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mi>q</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>.
-Note that in the original TFHE scheme, there is no need of the scaling factor
+Note that in the original TFHE scheme, there is no need for the scaling factor
 <!--  l. 1222  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi mathvariant='normal'>Δ</mi></math>, because the continuous
 domain of torus <!--  l. 1222  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>[</mo><mn>0</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math> provides a
                                                                                          
