--- a/Theorems2.html
+++ b/Theorems2.html
@@ -234,7 +234,7 @@ Roots of Unity</span></p></div>
 <div class='tcolorbox-content'><!--  l. 88  --><p class='noindent'>The number of primitive <!--  l. 88  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>-th
 roots of unity is <!--  l. 88  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>ϕ</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>n</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>
 (i.e., the number of elements in <!--  l. 88  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>{</mo><mn>1</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mo class='MathClass-rel' stretchy='false'>⋯</mo><mspace class='thinspace' width='0.17em'></mspace><mo class='MathClass-punc' stretchy='false'>,</mo><mi>n</mi> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>}</mo></mrow></math>
-that are co-prime to <!--  l. 88  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>).
+that are coprime to <!--  l. 88  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>).
 </p> 
 </div> 
 </div>
