--- a/TransformingBasisbetweenPolynomialRingandVectorSpace.html
+++ b/TransformingBasisbetweenPolynomialRingandVectorSpace.html
@@ -23,7 +23,7 @@ output vectors homomorphically preserve the same algebraic relationships on the
 <!--  l. 704  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mtext class='MathClass-open' stretchy='false'>(+,⋅)</mtext></mrow></math> operations and
 the basis relationship between basis vectors and a subspace can be expressed as a linear algebraic formula consisting
 of the <!--  l. 704  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mtext class='MathClass-open' stretchy='false'>(+,⋅)</mtext></mrow></math> operations
-(i.e., linear independence and spanning of the space). Therefore, if a set of polynomials satisfy a basis relationship,
+(i.e., linear independence and spanning of the space). Therefore, if a set of polynomials satisfies a basis relationship,
 their <!--  l. 704  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>σ</mi></math>-mapped
 vectors also preserve a basis relationship.
 </p><!--  l. 706  --><p class='indent'>   The same principle holds between a polynomial ring and vector space over complex numbers. Given the polynomial ring
@@ -38,11 +38,11 @@ is as follows:
 </p><!--  l. 718  --><p class='indent'>   <!--  l. 718  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
 </p><!--  l. 720  --><p class='indent'>   These <!--  l. 720  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>
 polynomials are linearly independent, because each polynomial exclusively has its own unique exponent
-term whereas one term cannot be expressed by a linear combination of the other terms. Also, These
+term, whereas one term cannot be expressed by a linear combination of the other terms. Also, these
 <!--  l. 720  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math> polynomials span
 the polynomial ring <!--  l. 720  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>ℝ</mi><mo class='MathClass-open' stretchy='false'>[</mo><mi>X</mi><mo class='MathClass-close' stretchy='false'>]</mo><mo class='MathClass-bin' stretchy='false'>∕</mo><mo class='MathClass-open' stretchy='false'>(</mo><msup><mrow><mi>x</mi></mrow><mrow><mi>n</mi></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>,
 because each polynomial’s scalar multiplication can express any coefficient value of its own exponent
-term, and summing all such polynomials can express any polynomials in the polynomial ring
+term, and summing all such polynomials can express any polynomial in the polynomial ring
 <!--  l. 720  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>ℝ</mi><mo class='MathClass-open' stretchy='false'>[</mo><mi>X</mi><mo class='MathClass-close' stretchy='false'>]</mo><mo class='MathClass-bin' stretchy='false'>∕</mo><mo class='MathClass-open' stretchy='false'>(</mo><msup><mrow><mi>X</mi></mrow><mrow><mi>n</mi></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>.
 </p><!--  l. 723  --><p class='indent'>   Now, we will apply the <!--  l. 723  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>σ</mi></mrow><mrow><mi>c</mi></mrow></msub></math>
 mapping to the above <!--  l. 723  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math> polynomials
