--- a/ContemplationonCKKSEncoding.html
+++ b/ContemplationonCKKSEncoding.html
@@ -29,7 +29,7 @@ resulting set of <!--  l. 1311  --><math display='inline' xmlns='http://www.w3.o
 be unique within the <!--  l. 1311  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>-th
 degree polynomial ring. Based on this insight, we designed a decoding matrix (<a href='EncodingandDecoding.html#encoding-and-decoding'><span class='ts1-lmr10-x-x-109'>§</span>D-3.1<!--  tex4ht:ref: subsec:ckks-rotation   --></a>) in
 the form of a Vandermonde matrix (<a href='VariousTypesofMatrix.html#various-types-of-matrix'><span class='ts1-lmr10-x-x-109'>§</span>A-10.2<!--  tex4ht:ref: subsec:ckks-rotation   --></a>). Then, the encoding formula is equivalent to
-multiplying the input complex vector by an inverse of this decoding matrix. However,
+multiplying the input complex vector by the inverse of this decoding matrix. However,
 in linear algebra, not all matrices are guaranteed to have a counterpart inverse matrix.
 Therefore, for the guarantee of the existence of a valid encoding matrix (i.e., an inverse of the
 decoding matrix), we leveraged the following arithmetic property: if a Vandermonde matrix
@@ -46,10 +46,10 @@ Therefore, CKKS uses <!--  l. 1311  --><math display='inline' xmlns='http://www.
 as the polynomial ring of its subsequent encryption and decryption scheme (<a href='EncryptionandDecryption2.html#encryption-and-decryption2'><span class='ts1-lmr10-x-x-109'>§</span>D-3.2<!--  tex4ht:ref: subsec:ckks-rotation   --></a>) as well.
 </p><!--  l. 1313  --><p class='indent'>   The CKKS encoding’s second reason for using the
 <!--  l. 1313  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>μ</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>2</mn><mi>n</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>-th cyclotomic
-polynomialis to design a valid input vector slot rotation scheme (<a href='HomomorphicRotationofInputVectorSlots1.html#homomorphic-rotation-of-input-vector-slots1'><span class='ts1-lmr10-x-x-109'>§</span>D-3.9<!--  tex4ht:ref: subsec:ckks-rotation   --></a>). In this rotation scheme, updating the encoded
+polynomial is to design a valid input vector slot rotation scheme (<a href='HomomorphicRotationofInputVectorSlots1.html#homomorphic-rotation-of-input-vector-slots1'><span class='ts1-lmr10-x-x-109'>§</span>D-3.9<!--  tex4ht:ref: subsec:ckks-rotation   --></a>). In this rotation scheme, updating the
                                                                                          
                                                                                          
-polynomial <!--  l. 1313  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>M</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>X</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>
+encoded polynomial <!--  l. 1313  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>M</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>X</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>
 to <!--  l. 1313  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>M</mi><mo class='MathClass-open' stretchy='false'>(</mo><msup><mrow><mi>X</mi></mrow><mrow><mi>J</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>h</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></msup><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>
 (where <!--  l. 1313  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>J</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>h</mi><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-rel' stretchy='false'>=</mo> <msup><mrow><mn>5</mn></mrow><mrow><mi>h</mi></mrow></msup><mspace width='0.2em'></mspace><mo class='MathClass-bin' stretchy='false'> mod</mo><mspace width='0.2em'></mspace> <mn>2</mn><mi>n</mi></mrow></math>)
 is equivalent to updating the CKKS decoding process’s each evaluation coordinate of
@@ -59,7 +59,7 @@ is equivalent to updating the CKKS decoding process’s each evaluation coordina
 each <!--  l. 1313  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>x</mi></mrow><mrow><mi>i</mi></mrow></msub></math> is the
 primitive <!--  l. 1313  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>μ</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>2</mn><mi>n</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>-th
 roots of unity), which gives the same effect as vertically rotating the encoding
-matrix (i.e., inverse of the Vandermonde matrix whose roots are the primitive
+matrix (i.e., the inverse of the Vandermonde matrix whose roots are the primitive
 <!--  l. 1313  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>μ</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>2</mn><mi>n</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>-th roots of unity)
 upward by <!--  l. 1313  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>h</mi></math> positions.
 And this vertical rotation of the encoding matrix (while the input vector is fixed) gives the same effect of rotating
