--- a/ForwardFFTorNTT.html
+++ b/ForwardFFTorNTT.html
@@ -12,7 +12,7 @@
    <h4 class='subsectionHead' id='forward-fft-or-ntt'><span class='titlemark'>A-16.2   </span> <a id='x56-69000A-16.2'></a>Forward FFT (or NTT)</h4>
 <!--  l. 38  --><p class='noindent'>We assume a polynomial ring of either <!--  l. 38  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>ℝ</mi><mo class='MathClass-open' stretchy='false'>[</mo><mi>X</mi><mo class='MathClass-close' stretchy='false'>]</mo><mo class='MathClass-bin' stretchy='false'>∕</mo><msup><mrow><mi>X</mi></mrow><mrow><mi>n</mi></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn></mrow></math>
 for FTT, and <!--  l. 38  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>ℤ</mi><msub><mrow><mo class='MathClass-open' stretchy='false'>[</mo><mi>X</mi><mo class='MathClass-close' stretchy='false'>]</mo></mrow><mrow><mi>p</mi></mrow></msub><mo class='MathClass-bin' stretchy='false'>∕</mo><msup><mrow><mi>X</mi></mrow><mrow><mi>n</mi></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn></mrow></math> for NTT (where
-<!--  l. 38  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msup><mrow><mi>X</mi></mrow><mrow><mi>n</mi></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn></mrow></math> is cyclotomic polynomial).
+<!--  l. 38  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msup><mrow><mi>X</mi></mrow><mrow><mi>n</mi></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn></mrow></math> is a cyclotomic polynomial).
 The <!--  l. 38  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>x</mi></math> coordinates to evaluate
 the target polynomial are <!--  l. 38  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>
 distinct <!--  l. 38  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>-th roots of
@@ -104,14 +104,14 @@ to the polynomial is the same).
 and <!--  l. 61  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi>A</mi></mrow><mrow><mn>1</mn></mrow></msub><mo class='MathClass-open' stretchy='false'>(</mo><mi>X</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>
 into half-degree polynomials and evaluate them at half-counted
 <!--  l. 61  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>-th roots of unity. Then, the
-total rounds of splitting is <!--  l. 61  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi class='loglike'>log</mi><mo>⁡<!--  FUNCTION APPLICATION  --></mo><!--  nolimits  --><mi>n</mi></mrow></math>,
+total rounds of splitting are <!--  l. 61  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi class='loglike'>log</mi><mo>⁡<!--  FUNCTION APPLICATION  --></mo><!--  nolimits  --><mi>n</mi></mrow></math>,
 and each round’s maximum number of root-to-coefficient multiplications is
 <!--  l. 61  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>, which
 aggregates to <!--  l. 61  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>O</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>n</mi><mi class='loglike'>log</mi><mo>⁡<!--  FUNCTION APPLICATION  --></mo><!--  nolimits  --><mi>n</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>.
    
 </p>
    <h5 class='subsubsectionHead' id='details'><span class='titlemark'>A-16.2.2   </span> <a id='x56-71000A-16.2.2'></a>Details</h5>
-<!--  l. 66  --><p class='noindent'>Suppose we have polynomial ring which is either
+<!--  l. 66  --><p class='noindent'>Suppose we have a polynomial ring which is either
 <!--  l. 66  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi>ℤ</mi></mrow><mrow><mi>p</mi></mrow></msub><mo class='MathClass-open' stretchy='false'>[</mo><mi>X</mi><mo class='MathClass-close' stretchy='false'>]</mo><mo class='MathClass-bin' stretchy='false'>∕</mo><msup><mrow><mi>X</mi></mrow><mrow><mn>8</mn></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn></mrow></math> (i.e., over a finite
 field with prime <!--  l. 66  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>p</mi></math>) or
 <!--  l. 66  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>ℝ</mi><mo class='MathClass-open' stretchy='false'>[</mo><mi>X</mi><mo class='MathClass-close' stretchy='false'>]</mo><mo class='MathClass-bin' stretchy='false'>∕</mo><msup><mrow><mi>X</mi></mrow><mrow><mn>8</mn></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn></mrow></math> (over complex numbers).
