--- a/GadgetDecompositionforNoiseSuppression.html
+++ b/GadgetDecompositionforNoiseSuppression.html
@@ -14,7 +14,7 @@
 the noise <!--  l. 79  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>E</mi></math>
 grows to <!--  l. 79  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msup><mrow><mi>E</mi></mrow><mrow><mi>′</mi></mrow></msup> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi mathvariant='normal'>Λ</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>E</mi></mrow></math>.
 To limit this noise growth, we introduce a technique based on decomposing
-<!--  l. 79  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi mathvariant='normal'>Λ</mi></math> (<a href='NumberDecomposition.html#number-decomposition'><span class='ts1-lmr10-x-x-109'>§</span>A-6.1<!--  tex4ht:ref: sec:glwe-mult-plain   --></a>) and an GLev
+<!--  l. 79  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi mathvariant='normal'>Λ</mi></math> (<a href='NumberDecomposition.html#number-decomposition'><span class='ts1-lmr10-x-x-109'>§</span>A-6.1<!--  tex4ht:ref: sec:glwe-mult-plain   --></a>) and a GLev
 encryption (<a href='Encryption3.html#encryption3'><span class='ts1-lmr10-x-x-109'>§</span>B-5.1<!--  tex4ht:ref: sec:glwe-mult-plain   --></a>) of <!--  l. 79  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>M</mi></math>
 as follows:
 </p><!--  l. 82  --><p class='indent'>   <!--  l. 82  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi mathvariant='normal'>Λ</mi> <mo class='MathClass-rel' stretchy='false'>=</mo><msub><mrow> <mi mathvariant='normal'>Λ</mi></mrow><mrow><mn>1</mn></mrow></msub><mstyle displaystyle='true'><mfrac><mrow>  <mi>q</mi>
